Prevent to create a category with a double colon in the name

BUG: 451677
FIXED-IN: 5.1.3